practice-exam-tracker-sfdx/PackageFormat/sfdx project/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Admin_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Admin Certified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Batch_Name__c</fullName>
        <label>Batch Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Secondary</fullName>
                </value>
                <value>
                    <fullName>Tertiary</fullName>
                </value>
                <value>
                    <fullName>Primary</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Master_Stage__c</fullName>
        <label>Master Stage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Selected</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>Training</fullName>
                </value>
                <value>
                    <fullName>Staging</fullName>
                </value>
                <value>
                    <fullName>Dropped</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PD1_Certified__c</fullName>
        <defaultValue>false</defaultValue>
        <label>PD1 Certified</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>